--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MoyeoRun-android</string>
+
+    <!-- common string -->
+    <string name="cancel">취소</string>
+    <string name="ok">확인</string>
+
 </resources>
