[#8] 기본 다이얼로그 추가
- 디자인 가이드 변경으로 CustomContentDialogFragment, RoundDialogFragment 제거
- 해당 공용 다이얼로그 없이는 BaseDialogFragment 명칭이 애매해지므로 RoundDialogFragment 로 수정
- 버튼 스타일 수정 (배경 X, 글자 색 수정)
- 기타 불필요해진 파일 및 코드 제거

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MoyeoRun-android</string>
 
-    <!-- common string -->
+    <!-- Common -->
     <string name="cancel">취소</string>
     <string name="ok">확인</string>
 
