--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <!-- Common -->
     <string name="cancel">취소</string>
     <string name="ok">확인</string>
+    <string name="toast_network_error">네트워크 연결 상태를 확인해주세요.</string>
 
     <!-- Login -->
     <string name="login_button_start">시작하기</string>
     <string name="login_button_google">구글 계정으로 로그인</string>
+    <string name="login_toast_unknown_error">로그인에 실패하였습니다.</string>
 </resources>
