--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="login_button_start">시작하기</string>
     <string name="login_button_google">구글 계정으로 로그인</string>
     <string name="login_toast_unknown_error">로그인에 실패하였습니다.</string>
+
+    <!-- Profile -->
+    <string name="profile_name">이름</string>
+    <string name="profile_nickname">닉네임</string>
+
 </resources>
