--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
     <!-- Profile -->
     <string name="profile_name">이름</string>
     <string name="profile_nickname">닉네임</string>
+    <string name="profile_gender">성별</string>
     <string name="profile_button_image_select_gallery">갤러리에서 선택</string>
     <string name="profile_button_image_select_default">기본 이미지에서 선택</string>
+    <string name="profile_toast_wrong_access">잘못된 접근입니다.</string>
 
 </resources>
